--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "devDependencies": {
     "@webpack-cli/serve": "^1.4.0",
     "file-loader": "^6.2.0",
-    "image-webpack-loader": "^6.0.0",
+    "image-webpack-loader": "^8.1.0",
     "webpack": "^5.37.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.9.3",
+    "webpack-pwa-manifest": "^4.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
